Adapt documentation and login tool
 * Reflect recent changes regarding tokens, login, etc. in docs
 * Fix some minor usability issues and a NPE in the login logic

Request: MO
Change-Id: Id85a9c84ed15c4b076af356d97e7bdc43b6b0941